// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Screens/Schedule Screen Default 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  overflow: visible;
  color: rgba(0, 0, 0, 0.54);
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-0::-moz-focus-inner {
  border-style: none;
}

.emotion-0.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-0 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-0:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

@media (hover: none) {
  .emotion-0:hover {
    background-color: transparent;
  }
}

.emotion-0.Mui-disabled {
  background-color: transparent;
  color: #7E7E7E;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: Rubik;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-height: auto;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 24px;
  padding: 0 16px;
  min-width: 48px;
  width: auto;
  height: 48px;
  z-index: 1050;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
  color: rgba(0, 0, 0, 0.87);
  background-color: #e0e0e0;
  color: #ffffff;
  background-color: #4caf51;
}

.emotion-1::-moz-focus-inner {
  border-style: none;
}

.emotion-1.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-1 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-1:active {
  box-shadow: 0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12);
}

.emotion-1:hover {
  background-color: #f5f5f5;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (hover: none) {
  .emotion-1:hover {
    background-color: #e0e0e0;
  }
}

.emotion-1.Mui-focusVisible {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
}

.emotion-1.Mui-disabled {
  color: #7E7E7E;
  box-shadow: none;
  background-color: #dadee0;
}

.emotion-1:hover {
  background-color: rgb(53, 122, 56);
}

@media (hover: none) {
  .emotion-1:hover {
    background-color: #4caf51;
  }
}

.emotion-2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton emotion-0"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg>
            menu.svg
          </svg>
        </button>
        <div
          className="title infoTitle"
        >
          ניהול תורים 🛠️
        </div>
      </div>
      <div
        className="stickyComponent"
      >
        <div
          className="container"
        >
          <div
            className="datePicker"
          >
            <svg
              className="chevronRight"
              onClick={[Function]}
            >
              chevron-right-small.svg
            </svg>
            <svg
              className="calendar"
            >
              calendar.svg
            </svg>
            <div
              className="dateLabel"
            >
              <span
                className="monthName"
              >
                ינואר
              </span>
              <span
                className="yearName"
              >
                
                ,
              </span>
              16
              -
              21
            </div>
            <svg
              className="chevronLeft"
              onClick={[Function]}
            >
              chevron-left-small.svg
            </svg>
          </div>
          <div
            className="hospitalSelectable"
            onClick={[Function]}
          >
            <svg
              className="chevronDown"
            >
              chevron-down.svg
            </svg>
            הדסה עין כרם
          </div>
        </div>
        <div
          className="hospitalPicker"
        >
          <div
            className="hospitalPickerTitle"
          >
            בחר/י בית חולים:
          </div>
          <div
            className="hospitalOption"
            onClick={[Function]}
          >
            <div
              className="hospitalName selectedHospital bottomBorder"
            >
              <svg
                className="selected"
              >
                selected.svg
              </svg>
              הדסה עין כרם
            </div>
          </div>
          <div
            className="hospitalOption"
            onClick={[Function]}
          >
            <div
              className="hospitalName bottomBorder"
            >
              סורוקה
            </div>
          </div>
          <div
            className="hospitalOption"
            onClick={[Function]}
          >
            <div
              className="hospitalName"
            >
              תל השומר
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="screenContent"
    >
      <div
        className="schedule"
      >
        <div
          className="gridColumns"
        >
          <div />
          <div
            className="dayLabel"
          >
            <div
              className="dayNumber"
            >
              16
            </div>
            <div
              className="dayLetter"
            >
              א
            </div>
          </div>
          <div
            className="dayLabel"
          >
            <div
              className="dayNumber"
            >
              17
            </div>
            <div
              className="dayLetter"
            >
              ב
            </div>
          </div>
          <div
            className="dayLabel"
          >
            <div
              className="dayNumber"
            >
              18
            </div>
            <div
              className="dayLetter"
            >
              ג
            </div>
          </div>
          <div
            className="dayLabel"
          >
            <div
              className="dayNumber"
            >
              19
            </div>
            <div
              className="dayLetter"
            >
              ד
            </div>
          </div>
          <div
            className="dayLabel"
          >
            <div
              className="dayNumber"
            >
              20
            </div>
            <div
              className="dayLetter"
            >
              ה
            </div>
          </div>
          <div
            className="dayLabel"
          >
            <div
              className="dayNumber"
            >
              21
            </div>
            <div
              className="dayLetter"
            >
              ו
            </div>
          </div>
          <div />
        </div>
        <div
          className="scheduleWeek gridColumns"
        >
          <div
            className="hourCell"
          >
            0
          </div>
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            1
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div />
          <div
            className="hourCell"
          >
            2
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            3
          </div>
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            4
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div />
          <div
            className="hourCell"
          >
            5
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            6
          </div>
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            7
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div />
          <div
            className="hourCell"
          >
            8
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            9
          </div>
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            10
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div />
          <div
            className="hourCell"
          >
            11
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            12
          </div>
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            13
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div />
          <div
            className="hourCell"
          >
            14
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            15
          </div>
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            16
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div />
          <div
            className="hourCell"
          >
            17
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            18
          </div>
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            19
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div />
          <div
            className="hourCell"
          >
            20
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            21
          </div>
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            22
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div />
          <div
            className="hourCell"
          >
            23
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root MuiFab-root MuiFab-extended MuiFab-sizeLarge MuiFab-primary makeStyles-fab-36 emotion-1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-2"
        data-testid="AddIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <div
        className="text"
      >
        הוסף תור
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Screens/Schedule Screen Loading 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-1 {
  0% {
    stroke-dasharray: 1px,200px;
    stroke-dashoffset: 0;
  }

  50% {
    stroke-dasharray: 100px,200px;
    stroke-dashoffset: -15px;
  }

  100% {
    stroke-dasharray: 100px,200px;
    stroke-dashoffset: -125px;
  }
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  overflow: visible;
  color: rgba(0, 0, 0, 0.54);
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-0::-moz-focus-inner {
  border-style: none;
}

.emotion-0.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-0 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-0:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

@media (hover: none) {
  .emotion-0:hover {
    background-color: transparent;
  }
}

.emotion-0.Mui-disabled {
  background-color: transparent;
  color: #7E7E7E;
}

.emotion-1 {
  display: inline-block;
  color: #4caf51;
  -webkit-animation: animation-0 1.4s linear infinite;
  animation: animation-0 1.4s linear infinite;
}

.emotion-2 {
  display: block;
}

.emotion-3 {
  stroke: currentColor;
  stroke-dasharray: 80px,200px;
  stroke-dashoffset: 0;
  -webkit-animation: animation-1 1.4s ease-in-out infinite;
  animation: animation-1 1.4s ease-in-out infinite;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: Rubik;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-height: auto;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 24px;
  padding: 0 16px;
  min-width: 48px;
  width: auto;
  height: 48px;
  z-index: 1050;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
  color: rgba(0, 0, 0, 0.87);
  background-color: #e0e0e0;
  color: #ffffff;
  background-color: #4caf51;
}

.emotion-4::-moz-focus-inner {
  border-style: none;
}

.emotion-4.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-4 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-4:active {
  box-shadow: 0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12);
}

.emotion-4:hover {
  background-color: #f5f5f5;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (hover: none) {
  .emotion-4:hover {
    background-color: #e0e0e0;
  }
}

.emotion-4.Mui-focusVisible {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
}

.emotion-4.Mui-disabled {
  color: #7E7E7E;
  box-shadow: none;
  background-color: #dadee0;
}

.emotion-4:hover {
  background-color: rgb(53, 122, 56);
}

@media (hover: none) {
  .emotion-4:hover {
    background-color: #4caf51;
  }
}

.emotion-5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton emotion-0"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg>
            menu.svg
          </svg>
        </button>
        <div
          className="title infoTitle"
        >
          ניהול תורים 🛠️
        </div>
      </div>
      <div
        className="stickyComponent"
      >
        <div
          className="container"
        >
          <div
            className="datePicker"
          >
            <svg
              className="chevronRight"
              onClick={[Function]}
            >
              chevron-right-small.svg
            </svg>
            <svg
              className="calendar"
            >
              calendar.svg
            </svg>
            <div
              className="dateLabel"
            >
              <span
                className="monthName"
              >
                ינואר
              </span>
              <span
                className="yearName"
              >
                
                ,
              </span>
              16
              -
              21
            </div>
            <svg
              className="chevronLeft"
              onClick={[Function]}
            >
              chevron-left-small.svg
            </svg>
          </div>
          <div
            className="hospitalSelectable"
            onClick={[Function]}
          >
            <svg
              className="chevronDown"
            >
              chevron-down.svg
            </svg>
            הדסה עין כרם
          </div>
        </div>
        <div
          className="hospitalPicker"
        >
          <div
            className="hospitalPickerTitle"
          >
            בחר/י בית חולים:
          </div>
          <div
            className="hospitalOption"
            onClick={[Function]}
          >
            <div
              className="hospitalName selectedHospital bottomBorder"
            >
              <svg
                className="selected"
              >
                selected.svg
              </svg>
              הדסה עין כרם
            </div>
          </div>
          <div
            className="hospitalOption"
            onClick={[Function]}
          >
            <div
              className="hospitalName bottomBorder"
            >
              סורוקה
            </div>
          </div>
          <div
            className="hospitalOption"
            onClick={[Function]}
          >
            <div
              className="hospitalName"
            >
              תל השומר
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="screenContent"
    >
      <div
        className="spinner"
      >
        <span
          className="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary emotion-1"
          role="progressbar"
          style={
            Object {
              "height": "3rem",
              "width": "3rem",
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg emotion-2"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate emotion-3"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={Object {}}
            />
          </svg>
        </span>
      </div>
    </div>
    <button
      className="MuiButtonBase-root MuiFab-root MuiFab-extended MuiFab-sizeLarge MuiFab-primary makeStyles-fab-37 emotion-4"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
        data-testid="AddIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <div
        className="text"
      >
        הוסף תור
      </div>
    </button>
  </div>
</div>
`;
